# s3logs-cloudwatch

./: .gitignore  README.md  configuration.ini  lambda_function.py  pyproject.toml  requirements.txt  shipit.sh  tox.ini
cloudformation/: cloudformation-deploy.json  validate-all.sh
